--- a/경기도미래기술학교/Django/mysite/templates/polls/question_form.html
+++ b/경기도미래기술학교/Django/mysite/templates/polls/question_form.html
@@ -10,6 +10,36 @@
 
 <body>
     {% extends 'base.html' %}
+    {% block content %}
+    <div class="container">
+        <h5 class="my-3 border-bottom pb-2">질문 등록</h5>
+        <form method="post" class="post-form my-3">
+            {% csrf_token %}
+            <!-- 질문 입력 페이지에서 오류메시지 출력 시작 -->
+            {% if form.errors %}
+                <div class="alert alert-warning" role="alert">
+                    {% for field in form %}
+                        {% if field.errors %}
+                        <strong>{{ field.label }}</strong>
+                        {{ field.errors }}
+                        {% endif %}
+                    {% endfor %}
+                </div>
+            {% endif %}
+            <!-- 질문 입력 페이지에서 오류메시지 출력 끝 -->
+            <div class="form-group">
+                <label for="subject">제목</label>
+                <input type="text" class="form-control" name="subject" id="subject" value="{{ form.subject.value|default_if_none:'' }}">
+            </div>
+            <div class="form-group">
+                <label for="content">내용</label>
+                <textarea class="form-control" name="content" id="content" rows="10">
+                    {{ form.content.value|default_if_none:'' }}</textarea>
+            </div>
+            <button type"submit" class="btn btn-primary">저장하기</button>
+        </form>
+    </div>
+    {% endblock %}
 </body>
 
 </html>
