--- a/경기도미래기술학교/Django/mysite/templates/polls/question_list.html
+++ b/경기도미래기술학교/Django/mysite/templates/polls/question_list.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>설문조사 페이지?</title>
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+    <title>메인 페이지</title>
 </head>
 
 <body>
+    {% extends 'base.html' %}
+    {% block content %}
     <div class="container my-3">
         <table class="table">
             <thead>
@@ -26,24 +26,24 @@
                 <tr>
                     <td>{{ forloop.counter }}</td>
                     <td>
-                        <a href="{% url 'polls:detail' question.id %}">
-                            {{ question.subject }}
-                        </a>
+                        <a href="{% url 'polls:detail' question.id %}">{{ question.subject }}</a>
+                        {% if question.answer_set.count >= 0 %}
+                        <span class="text-success small ml-2">({{ question.answer_set.count }})</span>
+                        {% endif %}
                     </td>
                     <td>{{ question.pub_date }}</td>
                 </tr>
                 {% endfor %}
                 {% else %}
                 <tr>
-                    <td colspan="3">질문이 없습니다.</td>
+                    <td colspan="3">질문이 없습니다</td>
                 </tr>
                 {% endif %}
             </tbody>
         </table>
-        <a href="{% url 'polls:question_create' %}" class="btn btn-primary">
-            질문 등록하기!
-        </a>
+        <a href="{% url 'polls:question_create' %}" class="btn btn-primary">질문 등록</a>
     </div>
+    {% endblock %}
 </body>
 
 </html>
